# anthill-di-configuration-extension

./: Cargo.toml  README.md  store_snapshot.json
src/: configuration_snapshot.rs  lib.rs
src/extensions/: mod.rs  register_configuration.rs  register_snapshot.rs  register_source.rs
src/source/: json_file.rs  mod.rs  source.rs
src/tests/: configuration_test.rs  create_if_not_exist_file.rs  load_configuration.rs  load_snapshot.rs  mod.rs  snapshot_test.rs  store_snapshot.rs
src/types/: mod.rs  results.rs
