[package]
name = "anthill-di-configuration-extension"
version = "0.1.0"
authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
edition = "2021"
description = "Rust configuration integrated in anthill-di"
license = "MIT"
homepage = "https://github.com/Vidrochka/anthill-di-configuration-extension"
repository = "https://github.com/Vidrochka/anthill-di-configuration-extension"
keywords = ["anthill", "configuration", "snapshot", "anthill-di", "extension"]

[dependencies]
anthill-di = "1.2.0"
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_derive = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"
derive-new = "0.5.9"