[package]
name = "anthill-di-configuration-extension"
version = "1.2.3"
authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
edition = "2021"
description = "Rust configuration integrated in anthill-di"
license = "MIT"
homepage = "https://github.com/Vidrochka/anthill-di-configuration-extension"
repository = "https://github.com/Vidrochka/anthill-di-configuration-extension"
keywords = ["anthill", "configuration", "snapshot", "anthill-di", "extension"]

[dependencies]
anthill-di = "1.2.3"
async-trait-with-sync = "0.1.36"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_derive = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"
derive-new = "0.5.9"